[package]
edition = "2021"
name = "wasmsx"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.70"
console_error_panic_hook = "0.1.6"
derivative = "2.2.0"
js-sys = "0.3.61"
serde = {version = "1.0.159", features = ["derive"]}
serde-big-array = "0.5.1"
serde_json = "1.0.95"
thiserror = "1.0.40"
time = {version = "0.3.20", features = ["wasm-bindgen"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "fmt", "time"]}
tracing-wasm = "0.2.1"
typetag = "0.2.7"
wai-bindgen-rust = "0.2.3"
wasm-bindgen = "0.2.84"
# z80 = "1.0.2"
z80 = { path = "./z80" }

[dev-dependencies]
ctor = "0.2.0"
